--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,3 +1,12 @@
+body {
+  font-family: "Rubik", sans-serif;
+  background-color: black;
+}
 .movie__poster {
-  height: 200px;
+  width: 140px;
+}
+.link {
+  text-decoration: none;
+  font-family: "Rubik", sans-serif;
+  color: white;
 }
