--- a/src/styles/MovieSceneItem.scss
+++ b/src/styles/MovieSceneItem.scss
@@ -20,6 +20,9 @@
     color: orangered;
     align-self: flex-end;
     padding-top: 30px;
+    &:hover {
+      color: white;
+    }
     @media all and (min-width: 470px) {
       padding-top: 10px;
     }
