--- a/src/styles/MovieSceneList.scss
+++ b/src/styles/MovieSceneList.scss
@@ -12,4 +12,10 @@
     width: 140px;
     padding-bottom: 40px;
   }
+  &__mesagge {
+    text-align: center;
+    padding-top: 30px;
+    font-family: "Rubik", sans-serif;
+    color: white;
+  }
 }
