--- a/src/styles/core/ButtonArrow.scss
+++ b/src/styles/core/ButtonArrow.scss
@@ -12,7 +12,11 @@
   align-self: flex-start;
   padding-left: 20px;
 }
-
+.favorite {
+  padding-left: 20px;
+  position: absolute;
+  padding-top: 20px;
+}
 .notfoundarrow {
   padding-top: 20px;
 }
